UHF-8095: Fixed alignments in quote component.

--- a/src/scss/05_objects/_quote.scss
+++ b/src/scss/05_objects/_quote.scss
@@ -2,19 +2,20 @@
   @include font('special.quote');
   display: block;
   margin: $spacing-triple 0;
-  padding: $spacing-half 0 $spacing-half $spacing-and-half;
+  padding-block: $spacing-half;
+  padding-inline: 0 $spacing-and-half;
   position: relative;
 
   @include breakpoint($breakpoint-l) {
     margin: $spacing-quadruple 0;
-    padding: 0 0 0 $spacing-double + $spacing-half;
+    padding-inline-start: $spacing-double + $spacing-half;
   }
 
   &::before {
     background-color: var(--hdbt-color-palette--primary);
     content: '';
     height: 100%;
-    left: 0;
+    inset-inline-start: 0;
     position: absolute;
     top: 0;
     width: 8px;
@@ -45,7 +46,7 @@
 
   &::before {
     content: '-';
-    margin-right: 3px;
+    margin-inline-end: 3px;
   }
 
   cite {
